--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,61 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "Arnold Boersma"
-theme = "ananke"
+theme = "anatole"
+summarylength = 10
+enableEmoji = true
+
+# Google Analytics
+#googleAnalytics = "UA-10446096-1"
+
+[params]
+title = "I'm Arnold Boersma"
+author = "Arnold Boersma"
+profilePicture = "images/profile.jpg"
+keywords = ""
+favicon = "favicons/"
+customCss = []
+mainSections = ["post"]
+
+## Math settings
+[params.math]
+enable = false  # options: true, false. Enable math support globally, default: false. You can always enable math on per page.
+use = "katex"  # options: "katex", "mathjax". default is "katex".
+
+## Social links
+[[params.socialIcons]]
+icon = "fa-linkedin"
+title = "Linkedin"
+url = "https://www.linkedin.com/in/arnoldboersma/"
+
+[[params.socialIcons]]
+icon = "fa-github"
+title = "GitHub"
+url = "https://github.com/arnoldboersma/"
+
+[[params.socialIcons]]
+icon = "fa-envelope"
+title = "e-mail"
+url = "mailto:aboersma@arnoldboersma.nl"
+
+## Menu items
+
+[menu]
+
+  [[menu.main]]
+  name = "Home"
+  identifier = "home"
+  weight = 100
+  url = "/"
+
+  [[menu.main]]
+  name = "Posts"
+  weight = 200
+  identifier = "posts"
+  url = "/posts/"
+
+  [[menu.main]]
+  name = "About"
+  weight = 300
+  identifier = "about"
+  url = "/about/"
