--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://thankful-stone-0f8a55103.azurestaticapps.net/"
+baseURL = "https://blog.arnoldboersma.nl/"
 languageCode = "en-us"
 title = "Arnold Boersma"
 theme = "anatole"
